Fix action buttons not top aligned evenly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,7 @@ body.dark-mode .loading {
 
 .zoom-container {
     position: relative;
+    margin: 0px;
 }
 
 .zoom-menu {
